--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,7 +32,7 @@ jobs:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: build --skip-publish
       - uses: FedericoCarboni/setup-ffmpeg@v1
         with:
           # Not strictly necessary, but it may prevent rate limit
