--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -39,9 +39,14 @@ jobs:
           # errors especially on GitHub-hosted macos machines.
           token: ${{ secrets.GITHUB_TOKEN }}
         id: setup-ffmpeg
-      - run: ls # ffmpeg -i input.avi output.mkv
+      - run: |
+          mv dist/movie-maker_linux_amd64/movie-maker /usr/bin/movie-maker
+          chmod +x /usr/bin/movie-maker
+          /usr/bin/movie-maker
+          ls -ltah
+        ls # ffmpeg -i input.avi output.mkv
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
-          name: dist
-          path: dist/*
+          name: frames
+          path: frames/*
