--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,7 +45,7 @@ jobs:
           mkdir -p frames
           /usr/bin/movie-maker
           ls -ltah frames
-          ffmpeg -r 1/24 -framerate 24 -i frames/seq-%d.png -c:v libx264 -vf fps=24 -pix_fmt yuv420p dist/out.mp4
+          ffmpeg -r 1 -i frames/seq-%d.png -pix_fmt yuv420p -r 10 dist/out.mp4
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
