chore: wip; ci;

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,7 +44,9 @@ jobs:
           sudo chmod +x /usr/bin/movie-maker
           mkdir -p frames
           /usr/bin/movie-maker
-          ls -ltah frames
+          f=$(( ( RANDOM % 24 )  + 1 ))
+          imageUri=$(curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" | jq -r '.photos[0].src.original')
+          curl $imageUri -o "frames/seq-${f}.png"
           ffmpeg -r 1 -i frames/seq-%d.png -pix_fmt yuv420p -r 10 dist/out.mp4
       - name: Upload assets
         uses: actions/upload-artifact@v2
