--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,9 +50,9 @@ jobs:
           f=$(( ( RANDOM % 24 )  + 1 ))
           curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" > res.json
           imageUri=$(cat res.json | jq -rc '.photos[0].src.original')
-          echo $imageUri
-          curl $imageUri -o "frames/seq-${f}.png"
-          ffmpeg -r 1 -i frames/seq-%d.png -pix_fmt yuv420p -r 10 dist/out.mp4
+          echo "Substitute frame #${f} with $imageUri"
+          curl $imageUri -o "frames/seq-${f}.jpeg"
+          ffmpeg -r 1 -i frames/seq-%d.jpeg -pix_fmt yuv420p -r 10 dist/out.mp4
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
