--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -52,7 +52,7 @@ jobs:
           imageUri=$(cat res.json | jq -rc '.photos[0].src.original')
           echo "Substitute frame #${f} with $imageUri"
           curl $imageUri -o "frames/seq-${f}.jpeg"
-          ffmpeg -r 0.3 -i frames/seq-%d.jpeg -pix_fmt yuv420p -r 10 dist/out.mp4
+          ffmpeg -framerate 3 -i frames/seq-%d.jpeg -r 8 -c:v libx264 -pix_fmt yuvj420p dist/out.mp4
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
