--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -40,6 +40,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
         id: setup-ffmpeg
       - name: Build
+        id: build
         env:
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
         run: |
@@ -49,12 +50,26 @@ jobs:
           /usr/bin/movie-maker
           f=$(( ( RANDOM % 24 )  + 1 ))
           curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" > res.json
+          photographer=$(cat res.json | jq -rc '.photos[0].photographer')
+          photographerUrl=$(cat res.json | jq -rc '.photos[0].photographer_url')
           imageUri=$(cat res.json | jq -rc '.photos[0].src.original')
           echo "Substitute frame #${f} with $imageUri"
           curl $imageUri -o "frames/seq-${f}.jpeg"
           ffmpeg -framerate 3 -i frames/seq-%d.jpeg -r 8 -c:v libx264 -pix_fmt yuvj420p dist/out.mp4
+          touch release.md
+          echo "![alt Image by $photographer]($imageUri \"Latest\")" >> release.md
+          echo "::set-output name=version::latest"
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
           name: frame
           path: dist/*.mp4
+      - uses: ncipollo/release-action@v1
+        id: xrelease
+        with:
+          allowUpdates: true
+          bodyFile: release.md
+          tag: ${{ steps.build.outputs.version }}
+          artifacts: "dist/*.mp4"
+          removeArtifacts: true
+          token: ${{ secrets.GITHUB_TOKEN }}
