--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,13 +2,10 @@
 
 name: CI
 
-# Controls when the workflow will run
+# Run every hour
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
+  schedule:
+    - cron: 0 * * * *
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
