--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -43,8 +43,7 @@ jobs:
         run: |
           curl https://unsplash.com/data/lite/latest -o dataset.zip
           ls
-          mv unsplash-research-dataset-lite-latest.zip dataset.zip
-          unzip dataset
+          unzip dataset.zip
           ls
       - name: Build
         id: build
