--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,9 +50,9 @@ jobs:
         if: steps.cache-unsplash.outputs.cache-hit != 'true'
         run: |
           sudo apt-get install fastjar
-          curl -L -O https://unsplash.com/data/lite/latest -o dataset.zip
+          curl -L -O https://unsplash.com/data/lite/latest
           ls
-          jar xvf dataset.zip
+          jar xvf latest
           ls
       - name: Build
         id: build
