--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -44,7 +44,9 @@ jobs:
         run: |
           curl -L -O https://github.com/eBay/tsv-utils/releases/download/v2.2.1/tsv-utils-v2.2.1_osx-x86_64_ldc2.tar.gz
           tar -zxvf tsv-utils-v2.2.1_osx-x86_64_ldc2.tar.gz
+          sudo cp -R tsv-utils-v2.2.1_osx-x86_64_ldc2/bin/ /usr/bin
           ls
+          ls /usr/bin
       - name: Cache Unsplash
         id: cache-unsplash
         uses: actions/cache@v2
