--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -70,7 +70,7 @@ jobs:
           f=$(( ( RANDOM % 24 )  + 1 ))
           head -1 photos.tsv000 > random100.tsv
           shuf -n 100 photos.tsv000 >> random100.tsv
-          tsv-pretty random100.tsv | head -n 5\
+          tsv-pretty random100.tsv | head -n 5
           tsv-select -H -f 2 random100.tsv
           randomUnsplash=$(head -n $f random100.tsv | tail -n 1)
           echo $randomUnsplash
