--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -72,7 +72,7 @@ jobs:
           shuf -n 100 photos.tsv000 >> random100.tsv
           # tsv-pretty random100.tsv | head -n 5
           # tsv-select -H -f 2 random100.tsv
-          randomUnsplash=$(head -n $f random100.tsv | tail -n 1)
+          randomUnsplash=$(tsv-select -H -f 2 random100.tsv | head -n 2 | tail -n 1)
           echo "randomUnsplash : $randomUnsplash"
 
           sudo mv dist/movie-maker_linux_amd64/movie-maker /usr/bin/movie-maker
