--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -66,17 +66,22 @@ jobs:
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
         run: |
 
+          mkdir -p frames
+
           # Get a random image from dataset
           f=$(( ( RANDOM % 24 )  + 1 ))
           head -1 photos.tsv000 > random100.tsv
           shuf -n 100 photos.tsv000 >> random100.tsv
           # tsv-pretty random100.tsv | head -n 5
-          randomUnsplash=$(tsv-select -H -f 3 random100.tsv | head -n 2 | tail -n 1)
+          tsv-select -H -f 3 random100.tsv | head -n 2 | tail -n 1 > dataset.tsv
+          randomUnsplash=$(cat dataset.tsv)
           echo "randomUnsplash : $randomUnsplash"
+          pushd frames
+          cat ../dataset.tsv | xargs -I % curl %
+          popd
 
           sudo mv dist/movie-maker_linux_amd64/movie-maker /usr/bin/movie-maker
           sudo chmod +x /usr/bin/movie-maker
-          mkdir -p frames
           /usr/bin/movie-maker
 
           curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" > res.json
