--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -65,42 +65,9 @@ jobs:
         env:
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
         run: |
+          chmod -R +x ./scripts/
+          ./scripts/build.sh
 
-          mkdir -p frames
-
-          # Get a random image from dataset
-          f=$(( ( RANDOM % 24 )  + 1 ))
-          head -1 photos.tsv000 > random100.tsv
-          shuf -n 100 photos.tsv000 >> random100.tsv
-          # tsv-pretty random100.tsv | head -n 5
-          tsv-select -H -f 3 random100.tsv | head -n 2 | tail -n 1 > dataset.tsv
-          randomUnsplash=$(cat dataset.tsv)
-          echo "randomUnsplash : $randomUnsplash"
-
-          pushd frames
-          cat ../dataset.tsv | xargs -I % curl -L -O %
-          ls
-          popd
-
-          sudo mv dist/movie-maker_linux_amd64/movie-maker /usr/bin/movie-maker
-          sudo chmod +x /usr/bin/movie-maker
-          /usr/bin/movie-maker
-
-          curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" > res.json
-          photographer=$(cat res.json | jq -rc '.photos[0].photographer')
-          photographerUrl=$(cat res.json | jq -rc '.photos[0].photographer_url')
-          imageUri=$(cat res.json | jq -rc '.photos[0].src.original')
-          smallImageUri=$(cat res.json | jq -rc '.photos[0].src.small')
-          mediumImageUri=$(cat res.json | jq -rc '.photos[0].src.medium')
-          echo "Substitute frame #${f} with $imageUri"
-          curl $imageUri -o "frames/seq-${f}.jpeg"
-          ffmpeg -framerate 3 -i frames/seq-%d.jpeg -r 8 -c:v libx264 -pix_fmt yuvj420p dist/out.mp4
-          touch release.md
-          today=$(date +'%m-%d-%Y')
-          echo "### $today 👨‍🎤 " >> release.md
-          echo "![alt Image by $photographer]($mediumImageUri \"Image by $photographer\")" >> release.md
-          echo "> Author: [$photographer]($photographerUrl)" >> release.md
-          echo "::set-output name=version::latest"
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
