--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,6 +4,9 @@ name: CI
 
 # Run every hour
 on:
+  push:
+    branches:
+      - feature/*
   schedule:
     - cron: 0 * * * *
 
@@ -20,52 +23,45 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.16
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          # either 'goreleaser' (default) or 'goreleaser-pro'
-          distribution: goreleaser
-          version: latest
-          args: --snapshot --skip-publish --rm-dist
       - uses: FedericoCarboni/setup-ffmpeg@v1
         with:
           # Not strictly necessary, but it may prevent rate limit
           # errors especially on GitHub-hosted macos machines.
           token: ${{ secrets.GITHUB_TOKEN }}
         id: setup-ffmpeg
+
+      - name: Install tsvUtils
+        run: |
+          curl -L https://github.com/eBay/tsv-utils/releases/download/v2.1.2/tsv-utils-v2.1.2_linux-x86_64_ldc2.tar.gz | tar xz
+          sudo chmod -R +x tsv-utils-v2.1.2_linux-x86_64_ldc2/bin
+          sudo mv -v tsv-utils-v2.1.2_linux-x86_64_ldc2/bin/* /usr/bin/
+
+      - name: Cache Unsplash
+        id: cache-unsplash
+        uses: actions/cache@v2
+        with:
+          path: photos.tsv000
+          key: ${{ runner.os }}-photos-dataset
+
+      - name: Download Unsplash dataset
+        if: steps.cache-unsplash.outputs.cache-hit != 'true'
+        run: |
+          sudo apt-get install fastjar
+          curl -L -O https://unsplash.com/data/lite/latest
+          jar xvf latest
+
       - name: Build
         id: build
-        env:
-          PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
         run: |
-          sudo mv dist/movie-maker_linux_amd64/movie-maker /usr/bin/movie-maker
-          sudo chmod +x /usr/bin/movie-maker
-          mkdir -p frames
-          /usr/bin/movie-maker
-          f=$(( ( RANDOM % 24 )  + 1 ))
-          curl -H "Authorization: ${PEXELS_API_KEY}" "https://api.pexels.com/v1/curated?per_page=1" > res.json
-          photographer=$(cat res.json | jq -rc '.photos[0].photographer')
-          photographerUrl=$(cat res.json | jq -rc '.photos[0].photographer_url')
-          imageUri=$(cat res.json | jq -rc '.photos[0].src.original')
-          smallImageUri=$(cat res.json | jq -rc '.photos[0].src.small')
-          mediumImageUri=$(cat res.json | jq -rc '.photos[0].src.medium')
-          echo "Substitute frame #${f} with $imageUri"
-          curl $imageUri -o "frames/seq-${f}.jpeg"
-          ffmpeg -framerate 3 -i frames/seq-%d.jpeg -r 8 -c:v libx264 -pix_fmt yuvj420p dist/out.mp4
-          touch release.md
-          today=$(date +'%m-%d-%Y')
-          echo "### $today 👨‍🎤 " >> release.md
-          echo "![alt Image by $photographer]($mediumImageUri \"Image by $photographer\")" >> release.md
-          echo "> Author: [$photographer]($photographerUrl)" >> release.md
-          echo "::set-output name=version::latest"
+          chmod -R +x ./scripts/
+          ./scripts/build.sh
+
       - name: Upload assets
         uses: actions/upload-artifact@v2
         with:
           name: frame
           path: dist/*.mp4
+
       - uses: ncipollo/release-action@v1
         id: xrelease
         with:
